feat(ai_engine): implement ML-based smart matching system
Generate synthetic labeled dataset for offer/request matching
Engineer features (keywords, location distance, quantity, etc.)
Train RandomForest model to predict match quality
Add Flask endpoint /match_score to provide match score using trained model
Install required Python packages (pandas, scikit-learn, geopy, flask)

--- a/frontend/synapse_app/web/index.html
+++ b/frontend/synapse_app/web/index.html
@@ -31,6 +31,9 @@
 
   <title>synapse_app</title>
   <link rel="manifest" href="manifest.json">
+  </head>
+  <!-- Google Maps API Key -->
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSKfX62OR56G4BZnAVtr_FzcvoIwA9IZI"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
